--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -118,6 +118,10 @@
         margin-top: 100px;
         font-size: 30px;
     }
+    .contact-text{
+      margin: 20px;
+      text-align: center;
+    }
 
     .form-group input,
     .form-group textarea,
@@ -131,7 +135,7 @@
     }
    .contact-top{
     margin-top: 30px;
-    margin-bottom: 20px;
+    margin-bottom: -30px;
    }
 
    .form-top{
@@ -148,43 +152,28 @@
    margin-bottom: 20px;
    }
 
-   .address-location{
-    font-size: 30px;
-    margin-bottom: 25px;
-    color: rgb(20, 20, 58);
+ 
+   .contact-label{
     font-weight: bold;
-   text-align: center;
-   }
-   .address-contact{
-    font-size: 20px;
-    text-align: center;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    margin-left: 5px;
    }
 
-   .address-contact-span{
-    color: rgb(76, 157, 197);
-    font-weight: bold;
-   }
+   .custom-select {
+    font-size: 16px; /* Adjust font size */
+    padding: 15px; /* Adjust padding */
+    border-radius: 5px; /* Add some rounded corners */
+    border: 1px solid #ccc; /* Add a border */
+    background-color: #fff; /* Set background color */
+    width: 80%; /* Make the select element expand to full width */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    
+    margin-left: 5px;
+    margin-bottom: 30px; /* Add a subtle shadow */
+  }
 
-
-   .contact-location{
-    font-size: 30px;
-    margin-bottom: 25px;
-    color: rgb(20, 20, 58);
-    font-weight: bold;
-    text-align: center;
-   
-   }
-
-   .phone-contact{
-    font-size: 20px;
-    text-align: center;
-   
-   }
-
-   .phone-contact-span{
-    color: rgb(76, 157, 197);
-   }
+  
   }
   
   
@@ -285,7 +274,7 @@
         text-align: center;
         color: rgb(20, 20, 58);
        
-        margin-top: 10px;
+        margin-top: 300px;
         font-size: 60px;
     }
 
@@ -317,46 +306,23 @@
    margin-bottom: 20px;
    }
 
-   .location-col{
-    margin-left: 20px;
-   }
-
-   .contact-col{
-    margin-left: 200px;
-   }
-
-   .address-location{
-    font-size: 30px;
-    margin-bottom: 25px;
-    color: rgb(20, 20, 58);
+   .contact-label{
     font-weight: bold;
-   }
-   .address-contact{
-    font-size: 20px;
-   }
-
-   .address-contact-span{
-    color: rgb(76, 157, 197);
-    font-weight: bold;
+    margin-bottom: 50px;
+    margin-right: 30px;
    }
 
+   .custom-select {
+    font-size: 16px; /* Adjust font size */
+    padding: 15px; /* Adjust padding */
+    border-radius: 5px; /* Add some rounded corners */
+    border: 1px solid #ccc; /* Add a border */
+    background-color: #fff; /* Set background color */
+    width: 40%; /* Make the select element expand to full width */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
+  }
 
-   .contact-location{
-    font-size: 30px;
-    margin-bottom: 25px;
-    color: rgb(20, 20, 58);
-    font-weight: bold;
-    margin-left: 40px;
-   }
-
-   .phone-contact{
-    font-size: 20px;
-    margin-left: 40px;
-   }
-
-   .phone-contact-span{
-    color: rgb(76, 157, 197);
-   }
+ 
   }
   
   @media screen and  (min-width: 1281px) {
@@ -369,7 +335,7 @@
         text-align: center;
         color: rgb(20, 20, 58);
        
-        margin-top: 10px;
+        margin-top: 300px;
         font-size: 60px;
     }
 
@@ -401,45 +367,21 @@
    margin-bottom: 20px;
    }
 
-   .location-col{
-    margin-left: 20px;
-   }
-
-   .contact-col{
-    margin-left: 200px;
-   }
-
-   .address-location{
-    font-size: 35px;
-    margin-bottom: 25px;
-    color: rgb(20, 20, 58);
+   .contact-label{
     font-weight: bold;
-   }
-   .address-contact{
-    font-size: 25px;
-   }
-
-   .address-contact-span{
-    color: rgb(76, 157, 197);
-    font-weight: bold;
+    margin-bottom: 50px;
+    margin-right: 30px;
    }
 
-
-   .contact-location{
-    font-size: 35px;
-    margin-bottom: 25px;
-    color: rgb(20, 20, 58);
-    font-weight: bold;
-    margin-left: 40px;
-   }
-
-   .phone-contact{
-    font-size: 25px;
-    margin-left: 40px;
-   }
-
-   .phone-contact-span{
-    color: rgb(76, 157, 197);
-   }
+   .custom-select {
+    font-size: 16px; /* Adjust font size */
+    padding: 15px; /* Adjust padding */
+    border-radius: 5px; /* Add some rounded corners */
+    border: 1px solid #ccc; /* Add a border */
+    background-color: #fff; /* Set background color */
+    width: 40%; /* Make the select element expand to full width */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
+  }
+  
   }
   
