--- a/src/components/home/cta/cta.css
+++ b/src/components/home/cta/cta.css
@@ -9,7 +9,7 @@
 }
 
 .btn-cta {
-    background-color: rgb(76, 157, 197);
+    background-color: red;
     color: #fff;
     padding: 10px 20px;
     border: none;
@@ -32,7 +32,7 @@
     }
 
     .cta h4 {
-       text-align: justify;
+       text-align:center;
         font-size: 20px; /* Adjust font size for smaller screens */
     }
 
@@ -51,10 +51,11 @@
     }
 
     .btn-cta {
-        font-size: 30px;
-        padding: 30px 30px;
+        font-size: 25px;
+        padding: 20px 20px;
         float: right;
-        margin-top: -119px;
+        margin-top: -140px;
         margin-right: 30px;
+        background-color: RED;
     }
 }
