--- a/src/components/home/hero/hero.css
+++ b/src/components/home/hero/hero.css
@@ -13,9 +13,8 @@
 
 
 
-  .btn-1,
-  .btn-2 {
-    margin-bottom: 70px; /* Add space between buttons */
+  .btn-hero-one,
+  .btn-hero-two {/* Add space between buttons */
     border-radius: 10px;
     border: none;
     background-color: rgb(20, 20, 58);
@@ -57,25 +56,32 @@
 
   .btn-crow{
     width: 100%;
-    padding-left: 18px;
-    padding-top: 20px;
+    padding-left: 20px;
   }
-  .btn-1{
+  .btn-hero-one{
     background-color: rgb(20, 20, 58);
-    padding: 20px 32px;
+    padding: 20px 50px;
     border-radius: 4px;
-    margin-top: 40px;
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
   
-  .btn-2 {
+  .btn-hero-two {
     background-color: rgb(20, 20, 58);
-    padding: 20px 32px;
-    border-radius: 4px;
+    padding: 20px 72px;
+    border-radius: 4px; 
+    margin-bottom: 20px;
   }
+
 
   .partners{
     text-align: center;
   font-size: 20px;
+}
+.partners-hero-img img {
+   
+  max-width: 70%;
+    margin: 20px 5px 10px 50px;
 }
 
 
@@ -87,48 +93,58 @@
 
 
   .container-fluid-hero{
-    width: 97.5%;
+    overflow: hidden;
+    width: 100%;
   }
   .hero-header {
-    padding: 60px 30px 30px 30px;
+    padding: 60px 30px 30px 15px;
     font-size: 45px;
     margin: -10px 10px;
     width: 100%;
   }
   .hero-desc{
-    padding-left: 20px;
+    width: 90%;
+    padding-left: 25px;
+    margin-bottom: 30px;
   }
 
   .btn-crow{
-    width: 100%;
-    padding-left: 35px;
-    padding-top: 20px;
+    padding-left: 25px;
+  
+    
   }
-  .btn-1{
+  .btn-hero-one{
     background-color: rgb(20, 20, 58);
-    padding: 20px 32px;
-    border-radius: 4px;
-    margin-top: 40px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    width: 100%;
   }
   
-  .btn-2 {
+  .btn-hero-two {
     background-color: rgb(20, 20, 58);
-    padding: 20px 32px;
-    border-radius: 4px;
+    width: 100%;
   }
-
 
 
   .partners{
     text-align: center;
-  font-size: 20px;
-  margin-top: 40px;
+  font-size: 15px;
+  margin-top: 20px;
+  margin-left: 16px;
     
 }
-.partners-img img {
-  padding-top: 80px;
-  padding-left: 20px;
+.partners-hero-img img {
+  width: 30%;
+  margin-left: 60px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
+/* .partners-hero-img img {
+   
+  max-width: 40%;
+    margin: 10px auto 10px 35px;
+} */
+
  
 }
   
@@ -163,8 +179,8 @@
     
   }
 
-  .btn-1,
-  .btn-2 {
+  .btn-hero-one,
+  .btn-hero-two {
     flex-direction: row;
     margin-left: 2px;
     padding: 25px 25px;
@@ -225,8 +241,8 @@
     
   }
 
-  .btn-1,
-  .btn-2 {
+  .btn-hero-one,
+  .btn-hero-two {
     flex-direction: row;
     margin-left: 2px;
     padding: 30px 30px;
@@ -267,38 +283,39 @@ margin: 5px;
    .hero-header {
     padding: 10px;
     font-size: 70px;
-    margin: 60px 40px 20px 40px;
+    margin: 30px 40px -10px 40px;
     width: 70%;
   }
 
   .hero-desc{
-    padding-left: 20px;
-    font-size: 30px;
+    padding: 30px  30px  30px  50px;
+    font-size: 25px;
     width: 80%;
   }
 
   .btn-crow{
     width: 50%;
+    padding-left: 50px;
+    padding-bottom: 50px;
   }
-  .btn-1{
+  .btn-hero-one{
     background-color: rgb(20, 20, 58);
     padding: 20px 32px;
     border-radius: 4px;
-    margin-top: 40px;
+    margin-top: 1px;
   }
   
-  .btn-2 {
+  .btn-hero-two {
     background-color: rgb(20, 20, 58);
     padding: 20px 32px;
-    border-radius: 4px;
-    margin-top: 40px; 
+    border-radius: 4px; 
   }
 
-  .btn-1:hover {
+  .btn-hero-one:hover {
     background-color: rgb(76, 157, 197);
   }
 
-  .btn-2:hover {
+  .btn-hero-two:hover {
     background-color: rgb(76, 157, 197);
   }
 
@@ -314,17 +331,18 @@ margin: 5px;
   }
 
   
-.partners-img img {
-  max-width: 50%;
-    margin: 5px;
-}
+  .partners-hero-img img {
+   
+    max-width: 15%;
+      margin: 61px;
+  }
 }
 
 @media screen and  (min-width: 1281px) {
 
   .background-image {
     
-    height: 120vh; /* Adjust as needed */
+    height: 160vh; /* Adjust as needed */
   }
 
   .container-fluid-hero{
@@ -333,40 +351,40 @@ margin: 5px;
    .hero-header {
     padding: 25px;
     font-size: 70px;
-    margin: 20px;
     width: 70%;
     margin-top: 30px;
+    margin: 30px 40px -15px 25px;
   }
 
   .hero-desc{
     padding: 25px;
     margin: 30px;
-    font-size: 30px;
+    font-size: 25px;
     width: 80%;
   }
 
   .btn-crow{
     width: 50%;
+    padding-left: 50px;
   }
-  .btn-1{
+  .btn-hero-one{
     background-color: rgb(20, 20, 58);
     padding: 20px 32px;
     border-radius: 4px;
-    margin-top: 40px;
+    margin-top: 1px;
   }
   
-  .btn-2 {
+  .btn-hero-two {
     background-color: rgb(20, 20, 58);
     padding: 20px 32px;
     border-radius: 4px;
-    margin-top: 40px; 
   }
 
-  .btn-1:hover {
+  .btn-hero-one:hover {
     background-color: rgb(76, 157, 197);
   }
 
-  .btn-2:hover {
+  .btn-hero-two:hover {
     background-color: rgb(76, 157, 197);
   }
  
@@ -381,9 +399,10 @@ margin: 5px;
   }
 
   
-.partners-img img {
-  max-width: 50%;
-    margin: 5px;
+.partners-hero-img img {
+  padding-left: 35px;
+  max-width: 18%;
+    margin: 30px;
 }
 }
 
