--- a/src/components/home/masterpiece/masterpiece.css
+++ b/src/components/home/masterpiece/masterpiece.css
@@ -100,6 +100,7 @@ font-size: 30px;
     font-size: 12px;
    text-align: center;
    margin-bottom: 30px;
+   margin-right: 10px;
   }
   .col-master {
     width: calc(50% - 1px); /* Adjust as needed with margin */
@@ -213,6 +214,7 @@ font-size: 30px;
     font-size: 15px;
    text-align: center;
    margin-bottom: 30px;
+   margin-right: 20px;
   }
   .col-master {
     width: calc(20% - 1px); /* Adjust as needed with margin */
@@ -250,6 +252,7 @@ font-size: 30px;
     font-size: 13px;
    text-align: center;
    margin-bottom: 30px;
+   margin-right: 20px;
   }
   .col-master {
     width: calc(20% - 1px); /* Adjust as needed with margin */
