--- a/src/components/home/ourwork/ourwork.css
+++ b/src/components/home/ourwork/ourwork.css
@@ -36,6 +36,7 @@
     .img-fluid {
         max-width: 75%;
         margin-left: 30px;
+        margin-bottom: 30px;
       }
 
 
@@ -83,6 +84,11 @@ box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
   }
   
   @media screen and (min-width: 1025px) and (max-width: 1280px) {
+
+    .ourwork-header{
+      padding: 20px;
+      font-size: 40px;
+    }
   
     .col-work {
       width: calc(20% - 1px); /* Adjust as needed with margin */
@@ -96,6 +102,12 @@ box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
   }
   
   @media screen and  (min-width: 1281px) {
+
+    
+    .ourwork-header{
+      padding: 20px;
+      font-size: 40px;
+    }
   
     .col-work {
       width: calc(20% - 1px); /* Adjust as needed with margin */
