--- a/src/components/home/testimonial/testimonial.css
+++ b/src/components/home/testimonial/testimonial.css
@@ -157,6 +157,15 @@
         flex-basis: 100%; /* One testimonial per row */
       }
 
+
+      .testimonial-header{
+        text-align: center;
+        padding: 20px;
+        color: rgb(20, 20, 58);
+        font-size: 40px;
+        margin-bottom: 30px;
+        
+    }
       .testimonial-img {
         width: 80px;
         height: 80px;
@@ -182,6 +191,15 @@
     }
     
     @media screen and  (min-width: 1281px) {
+
+      .testimonial-header{
+        text-align: center;
+        padding: 20px;
+        color: rgb(20, 20, 58);
+        font-size: 40px;
+        margin-bottom: 30px;
+        
+    }
       .col-md-4 {
         flex-basis: 100%; /* One testimonial per row */
       }
