--- a/src/components/home/whatwedo/whatwedo.css
+++ b/src/components/home/whatwedo/whatwedo.css
@@ -10,13 +10,30 @@
     color: rgb(20, 20, 58);
     font-size: 30px;
 }
-  
+
+.whatwedo-header-phone{
+  text-align: center;
+  padding: 20px;
+  color: rgb(20, 20, 58);
+  font-size: 30px;
+}
+
   .whatwedo-main-text {
     font-size: 24px;
     color: white;
   }
 
+  .whatwedo-main-text-phone {
+    font-size: 34px;
+    color: white;
+  }
+
   .image-box {
+    border: 1px solid #ccc;
+    padding: 10px;
+    text-align: center;
+  }
+  .image-box-phone {
     border: 1px solid #ccc;
     padding: 10px;
     text-align: center;
@@ -28,10 +45,25 @@
 
   
   .whatwedo-paragraph{
+    color: rgb(20, 20, 58);
+  }
+  .whatwedo-paragraph-phone{
     color: white;
   }
 
   .whatwedo-btn{
+    background-color: rgb(20, 20, 58);
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 18px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+  }
+
+  .whatwedo-btn-phone{
     background-color: rgb(20, 20, 58);
     color: #fff;
     padding: 10px 20px;
@@ -97,29 +129,46 @@
 
     
       .whatwedo-main-text {
-        font-size: 50px;
+        font-size: 35px;
         text-align: center;
         color: white;
         padding-bottom: 20px;
         padding-top: 30px;
       }
+      .whatwedo{
+        display: none;
+      }
 
-      .image-box {
+      .whatwedo-phone{
+        background-color: rgb(76, 157, 197); /* Set the background color */
+        padding: 20px; /* Add padding around the content */
+        text-align: center;
+      }
+
+      .whatwedo-header-phone{
         margin-bottom: 30px;
-        padding: 50px;
       }
-      .whatwedo-paragraph{
-        font-size: 17px;
-        padding-bottom: 20px;
-      }
-
-      .whatwedo-btn {
-        padding: 30px 10px;
-        margin: 0 auto 50px auto;
-        width: 40%;
-        display: block;
-      }
+      
+  .whatwedo-main-text-phone {
+   margin-bottom: 30px;
+   font-size: 40px;
+   
   }
+
+  .image-box-phone {
+   margin-bottom: 40px;
+   padding: 30px;
+  }
+
+  .whatwedo-btn-phone{
+    margin-top: 20px;
+    margin-bottom: 60px;
+    padding: 20px;
+    width: 50%;
+    margin-left: 100px;
+  }
+  }
+
   
   @media (min-width:481px) and (max-width: 767px) {
     .col {
@@ -153,6 +202,7 @@
   }
   
   @media screen and (min-width: 768px) and (max-width: 1024px) {
+   
     .col {
       flex-basis: 33.33%; /* One section per row */
     }
@@ -172,19 +222,29 @@
         padding: 50px;
       }
       .whatwedo-paragraph{
-        font-size: 25px;
+        font-size: 17px;
         padding-bottom: 20px;
       }
 
       .whatwedo-btn {
         padding: 30px 10px;
         margin: 0 auto 50px auto;
-        width: 30%;
-        display: block;
+        width: 50%;
       }  
+
+      .whatwedo-phone{
+        display: none;
+      }
+
+      
   }
   
   @media screen and (min-width: 1025px) and (max-width: 1280px) {
+
+    .whatwedo-header{
+      font-size: 40px;
+  }
+  
     .test {
       display: flex;
       flex-wrap: wrap;
@@ -223,11 +283,13 @@
     .whatwedo-btn {
       width: 50%;
       padding: 30px;
-      margin-left: 100px;
       margin-bottom: 30px;
     }
     .whatwedo-btn:hover {
      background-color: rgb(36, 124, 168);
+    }
+    .whatwedo-phone{
+      display: none;
     }
   }
   
@@ -237,15 +299,10 @@
       justify-content: space-between;
       align-items: flex-start;
     }
-  
-    .col-whatwedo {
-      flex-basis: calc(33.33% - 20px);
-      margin-bottom: 20px;
-      padding: 0 10px;
-    }
-  
+
     .whatwedo-main-text {
-      font-size: 50px;
+      font-size: 40px;
+      margin-top: 20px;
     }
   
     .image-box {
@@ -260,7 +317,7 @@
     }
   
     .whatwedo-paragraph {
-      font-size: 30px;
+      font-size: 20px;
       padding-bottom: 20px;
       padding-top: 20px;
     }
@@ -268,8 +325,11 @@
     .whatwedo-btn {
       width: 50%;
       padding: 30px;
-      margin-left: 200px;
       margin-bottom: 30px;
+    }
+
+    .whatwedo-phone{
+      display: none;
     }
   }
   
