--- a/src/components/marketing/marketing.css
+++ b/src/components/marketing/marketing.css
@@ -1,176 +1,323 @@
-.marketing-header{
-    text-align: center;
+.background-image-market {
+  background-image: url('../../images/pages/market.jpg'); /* Replace with your image path */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 120vh; /* Adjust as needed */
 }
 
-.marketing-desc{
-    text-align: center;
+.hero-header-market{
+  font-weight: bold;
+  color: rgb(20, 20, 58);
 }
-.box {
-    width: calc(25% - 20px); /* Four boxes per row with a little spacing */
-    margin: 10px;
-    border: 1px solid #ddd;
-    padding: 15px;
-    text-align: center;
+
+
+
+  .btn-hero-one-market,
+  .btn-hero-two-market {/* Add space between buttons */
+    border-radius: 10px;
+    border: none;
+    background-color: rgb(20, 20, 58);
+    color: #fff;
+    cursor: pointer;
+   
    
   }
-  .box:hover {
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Add box shadow on hover */
-  }
 
-  .gtext{
-    text-decoration: none;
-    color: black;
+  .btn-text-market{
     font-weight: bold;
   }
 
-  .box h4 {
-    margin: 0;
-  }
 
-  
-  @media (max-width: 576px) {
-      .background-image-marketing {
-          background-image: url('../../images/pages/market.jpg'); /* Replace with your image path */
-          background-size: cover;
-          background-position: center;
-          background-repeat: no-repeat;
-          height: 100vh; /* Adjust as needed */
-      }
-  
-
-      .marketing-header{
-        padding: 20px;
-        color: rgb(20, 20, 58);
-        font-size: 30px;
-        
+  @media (min-width:280px) {
+    .container-fluid-hero-market{
+      width: 96%;
     }
-
-    .box {
-        width: calc(50% - 20px); /* Two boxes per row with a little spacing */
-      }
-
-      .gtext{
-        font-size: 13px;
-        }
-      h1{
-        font-size: 40px;
-      margin: 0.25rem; 
-    padding-top: 0.75rem;
-    font-weight: bold;;
-    margin: 20px;
+  
+    .hero-header-market {
+      font-size: 33px;
+      margin: 30px 10px 10px 10px;
+      width: 100%;
+    }
+  
+  
+    .hero-desc-market{
+      padding-left: 1px;
+    }
+  
+    .btn-crow-market{
+      width: 100%;
+      padding-left: 20px;
+    }
+    .btn-hero-one-market{
+      background-color: rgb(20, 20, 58);
+      padding: 20px 50px;
+      border-radius: 4px;
+      margin-top: 20px;
+      margin-bottom: 20px;
+    }
     
-      }
+    .btn-hero-two-market {
+      background-color: rgb(20, 20, 58);
+      padding: 20px 72px;
+      border-radius: 4px; 
+      margin-bottom: 20px;
+    }
   
-      .hero-desc{
-        margin: 22px;
-      }
   
   
-      .btn-1,
-      .btn-2 {
-        padding: 25px 20px;
-        max-width: none;
-        border-radius: 4px;
-        margin-top: 20px;
-        flex-direction: column;
-        margin: 1px;
-        flex-direction: row;
-      }
-      
-      .partners{
-          text-align: center;
-          padding: 30px 20px 30px 20px;
-          
-      }
-      
-      .partners-img{
-              flex-direction: row;
-              align-items: center;
-              display: flex;
-              justify-content: center;
-      
-      }
-      .partners-img img {
-          max-width: 23%;
-          margin: 5px;
-      }
+   
   }
+    
+  
+  @media (min-width:350px) and (max-width: 480px) {
   
   
-  @media (min-width: 900px) {
-    .background-image-marketing {
-        background-image: url('../../images/pages/market.jpg'); /* Replace with your image path */
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      height: 130vh; /* Adjust as needed */
+    .container-fluid-hero-market{
+      width: 97.5%;
+    }
+    .hero-header-market {
+      padding: 60px 30px 30px 15px;
+      font-size: 45px;
+      margin: -10px 10px;
+      width: 100%;
+    }
+    .hero-desc-market{
+      width: 90%;
+      padding-left: 25px;
+      margin-bottom: 40px;
+      margin-top: 20px;
+    }
+  
+    .btn-crow-market{
+      padding-left: 25px;
+    
+      
+    }
+    .btn-hero-one-market{
+      background-color: rgb(20, 20, 58);
+      margin-bottom: 10px;
+      margin-top: 10px;
+      width: 100%;
+    }
+    
+    .btn-hero-two-market {
+      background-color: rgb(20, 20, 58);
+      width: 100%;
     }
   
 
-    .marketing-header{
-        padding: 20px;
-        color: rgb(20, 20, 58);
-        font-size: 40px;
+   
+  }
+    
+  
+  @media screen and (min-width: 481px) and (max-width: 767px) {
+  
+    .background-image-market {
+      
+      height: 150vh; /* Adjust as needed */
     }
-
-    .box {
-        margin-left: 80px;
-        width: calc(40%); /* Four boxes per row with a little spacing */
-      }
-
-      .gtext{
-        font-size: 15px;
-        }
-
-    .marketing-desc{
-        font-size: 25px;
-        padding-bottom: 20px;
+  
+    .container-fluid-hero-market{
+      width: 98.7%;
     }
-
-    .btn-text {
-    font-weight: bold;
-    }
-    h1{
+     .hero-header {
+      padding: 10px;
       font-size: 65px;
-      color: rgb(20, 20, 58);
-      margin: 30px;   
-      padding-top:5px;
-      text-align: start;
-      width: 55%;
-      font-weight: bold;
+      margin: 20px;
+      width: 70%;
     }
   
-    .hero-desc{
+    .hero-desc-market{
       margin: 30px;
     }
   
-    .btn-1,
-    .btn-2 {
-      flex-direction: row;
+    .button-container {
+      display: flex; 
+      width: 80%;
       margin-left: 30px;
-      padding: 25px 25px;
-  
-    }
-    
-    .partners{
-      text-align: center;
-          padding: 30px 20px 30px 20px;
-          font-size: 20px;
-        
-    }
-    
-    .partners-img{
       flex-direction: row;
-      align-items: center;
-      display: flex;
-      justify-content: center;
+      
+      
+    }
+  
+    .btn-hero-one-market,
+    .btn-hero-two-market {
+      flex-direction: row;
+      margin-left: 2px;
+      padding: 25px 25px;
+      margin-top: 30px;
+     
+    }
+  
+    .hero-desc-market{
+      font-size: 25px;
+    }
+    .btn-text{
+      font-size: 20px;
+    }
+  
+    
+  }
+  
+  
+  @media screen and (min-width: 768px) and (max-width: 1024px) {
+  
+    .background-image-market {
+      
+      height: 150vh; /* Adjust as needed */
+    }
+  
+    .container-fluid-hero-market{
+      width: 99%;
+    }
+     .hero-header {
+      padding: 10px;
+      font-size: 70px;
+      margin: 20px;
+      width: 70%;
+    }
+  
+    .hero-desc-market{
+      margin: 30px;
+      font-size: 30px;
+      width: 80%;
+    }
+  
+    .button-container {
+      display: flex; 
+      width: 80%;
+      margin-left: 2px;
+      flex-direction: row;
+      
+      
+    }
+  
+    .btn-hero-one-market,
+    .btn-hero-two-market {
+      flex-direction: row;
+      margin-left: 2px;
+      padding: 30px 30px;
+      margin-top: 30px;
+     
+    }
+  
+   
+    .btn-text{
+      font-size: 25px;
+    }
+  
+    
+  }
+  
+  @media screen and (min-width: 1025px) and (max-width: 1280px) {
+  
+    .background-image-market {
+      
+      height: 160vh; /* Adjust as needed */
+    }
+  
+    .container-fluid-hero-market{
+      width: 99.2%;
+    }
+     .hero-header-market {
+      padding: 10px;
+      font-size: 70px;
+      margin: 30px 40px -10px 40px;
+      width: 70%;
+    }
+  
+    .hero-desc-market{
+      padding: 30px 30px 30px 50px;
+      font-size: 25px;
+      width: 80%;
+    }
+  
+    .btn-crow-market{
+      width: 50%;
+      padding-left: 50px;
+    }
+    .btn-hero-one-market{
+      background-color: rgb(20, 20, 58);
+      padding: 20px 32px;
+      border-radius: 4px;
+      margin-top: 1px;
+    }
+    
+    .btn-hero-two-market {
+      background-color: rgb(20, 20, 58);
+      padding: 20px 32px;
+      border-radius: 4px; 
+    }
+  
+    .btn-hero-one-market:hover {
+      background-color: rgb(76, 157, 197);
+    }
+  
+    .btn-hero-two-market:hover {
+      background-color: rgb(76, 157, 197);
+    }
+  
+   
+    .btn-text-market{
+      font-size: 20px;
+    }
+  
   
   }
-  .partners-img img {
-  max-width: 20%;
-  padding-left: 22px;
-  padding-right: 60px;
-  margin: 5px;
-  }
+  
+  @media screen and  (min-width: 1281px) {
+  
+    .background-image-market {
+      
+      height: 160vh; /* Adjust as needed */
+    }
+  
+    .container-fluid-hero-market{
+      width: 99.2%;
+    }
+     .hero-header-market {
+      padding: 40px;
+      font-size: 70px;
+      width: 70%;
+      margin-top: 30px;
+      margin: 30px 40px -15px 25px;
+    }
+  
+    .hero-desc-market{
+      padding: 5px 40px 40px 40px;
+      margin: 30px;
+      font-size: 25px;
+      width: 80%;
+    }
+  
+    .btn-crow-market{
+      width: 50%;
+      padding-left: 70px;
+    }
+    .btn-hero-one-market{
+      background-color: rgb(20, 20, 58);
+      padding: 20px 32px;
+      border-radius: 4px;
+      margin-top: 1px;
+    }
+    
+    .btn-hero-two-market {
+      background-color: rgb(20, 20, 58);
+      padding: 20px 32px;
+      border-radius: 4px;
+    }
+  
+    .btn-hero-one-market:hover {
+      background-color: rgb(76, 157, 197);
+    }
+  
+    .btn-hero-two-market:hover {
+      background-color: rgb(76, 157, 197);
+    }
+   
+    .btn-text{
+      font-size: 25px;
+    }
   }
   
