--- a/src/components/blog/blog.css
+++ b/src/components/blog/blog.css
@@ -1,5 +1,5 @@
 .background-image-blog {
-    background-image: url('../../images/ktnLogo/KTNBlog.jpg'); /* Replace with your image path */
+    background-image: url('../../images/ktnLogo/ktnImage.svg'); /* Replace with your image path */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -142,25 +142,37 @@
     left: 170px;
     margin-bottom: 50px;
     margin-top: 70px;
-    font-size: 40px;
+    font-size: 30px;
     
   }
 
   .blog-select {
-    font-size: 16px; 
-    padding: 10px; 
-    width: 250px; 
+    display: flex;
+    padding: 20px 20px 20px 10px;
+    border: 3px solid rgb(20, 20, 58);
+    border-radius: 7px;
+    font-size: 16px;
+    color: rgb(20, 20, 58);
+    background-color: #fff;
+    cursor: pointer;
   }
 
+  .blog-value  {
+    font-size: 10px;
+    color: rgb(20, 20, 58);
+    background-color: rgb(76, 157, 197);
+  }
   .blog-drop{
     position: relative;
-    top: 70px;
+    top: 50px;
+    
   }
   
   .ktn-blog-text{
     font-weight: bold;
     color: rgb(20, 20, 58);
   }
+
 
 }
 
@@ -188,19 +200,30 @@
     margin-left: 360px;
     margin-bottom: 50px;
     margin-top: 70px;
-    font-size: 50px;
+    font-size: 30px;
   }
 
   
   .blog-select {
-    font-size: 16px; 
-    padding: 20px; 
-    width: 270px; 
+    display: inline-block;
+    padding: 20px 80px 20px 10px;
+    border: 3px solid rgb(20, 20, 58);
+    border-radius: 7px;
+    font-size: 16px;
+    color: rgb(20, 20, 58);
+    background-color: #fff;
+    cursor: pointer;
   }
 
+  .blog-value  {
+    padding: 100px;
+    font-size: 10px;
+    color: rgb(20, 20, 58);
+    background-color: rgb(76, 157, 197);
+  }
   .blog-drop{
     position: relative;
-    top: 70px;
+    top: 50px;
   }
   .ktn-blog-text{
     font-weight: bold;
