--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -22,6 +22,16 @@
    }
 
 
+   .custom-select {
+    display: inline-block;
+    padding: 20px 80px 20px 20px;
+    border: 3px solid rgb(20, 20, 58);
+    border-radius: 7px;
+    font-size: 16px;
+    color: rgb(20, 20, 58);
+    background-color: #fff;
+    cursor: pointer;
+}
 
 @media (min-width:280px) {
     .background-image-contact {
@@ -305,6 +315,9 @@
    .btn-contact{
    margin-bottom: 20px;
    }
+   .btn-contact:hover{
+   background-color: rgb(76, 157, 197);
+    }
 
    .contact-label{
     font-weight: bold;
@@ -312,14 +325,22 @@
     margin-right: 30px;
    }
 
+  
    .custom-select {
-    font-size: 16px; /* Adjust font size */
-    padding: 15px; /* Adjust padding */
-    border-radius: 5px; /* Add some rounded corners */
-    border: 1px solid #ccc; /* Add a border */
-    background-color: #fff; /* Set background color */
-    width: 40%; /* Make the select element expand to full width */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
+    padding: 15px 60px 15px 15px;
+    font-size: 14px;
+}
+
+ .custom-select option {
+    font-size: 10px;
+    color: rgb(20, 20, 58);
+    background-color: rgb(76, 157, 197);
+  }
+
+  .contact-text{
+    text-align: center;
+    padding: 60px 50px 1px 50px;
+    font-size: 20px;
   }
 
  
@@ -347,7 +368,7 @@
     }
 
     .form-contact{
-        padding: 120px;
+        padding: 40px 120px 120px 120px;
     }
    .contact-top{
     margin-top: 60px;
@@ -367,6 +388,10 @@
    margin-bottom: 20px;
    }
 
+   .btn-contact:hover{
+   background-color: rgb(76, 157, 197);
+    }
+ 
    .contact-label{
     font-weight: bold;
     margin-bottom: 50px;
@@ -374,14 +399,19 @@
    }
 
    .custom-select {
-    font-size: 16px; /* Adjust font size */
-    padding: 15px; /* Adjust padding */
-    border-radius: 5px; /* Add some rounded corners */
-    border: 1px solid #ccc; /* Add a border */
-    background-color: #fff; /* Set background color */
-    width: 40%; /* Make the select element expand to full width */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
+    padding: 20px 80px 20px 20px;
+    font-size: 16px;
+}
+  .custom-select option {
+    padding: 100px;
+    font-size: 10px;
+    color: rgb(20, 20, 58);
+    background-color: rgb(76, 157, 197);
   }
-  
+  .contact-text{
+    text-align: center;
+    padding: 60px 50px 1px 50px;
+    font-size: 25px;
+  }
   }
   
