--- a/src/components/home/cta/cta.css
+++ b/src/components/home/cta/cta.css
@@ -9,7 +9,7 @@
 }
 
 .btn-cta {
-    background-color: red;
+    background-color:  rgb(76, 157, 197);
     color: #fff;
     padding: 10px 20px;
     border: none;
@@ -56,6 +56,5 @@
         float: right;
         margin-top: -140px;
         margin-right: 30px;
-        background-color: RED;
     }
 }
