--- a/src/components/home/subscribenewsletter/newsletter.css
+++ b/src/components/home/subscribenewsletter/newsletter.css
@@ -7,6 +7,7 @@
 .newsletter-text {
     font-size: 20px;
     text-align: center;
+    color: white;
 }
 
 .newsletter-btn{
@@ -123,6 +124,7 @@
 
     .ktn-span{
         font-weight: bold;
+        color: rgb(20, 20, 58);
     }
     .newsletter-btn {
         width: 30%;
@@ -130,8 +132,15 @@
         margin: 0 auto;
     display: block;
     margin-bottom: 30px;
-    background-color: RED;
       } 
+
+      
+      .ktnplus{
+        width: 200;
+        height: 900px;
+        margin-top: -390px;
+        margin-bottom: -350px;
+      }
   }
   
   @media screen and  (min-width: 1281px) {
@@ -149,6 +158,7 @@
 
     .ktn-span{
         font-weight: bold;
+        color: rgb(20, 20, 58);
     }
     .newsletter-btn {
         width: 30%;
@@ -156,7 +166,13 @@
         margin: 0 auto;
     display: block;
     margin-bottom: 30px;
-   background-color: RED;
       } 
+
+      .ktnplus{
+        width: 900px;
+        height: 900px;
+        margin-top: -380px;
+        margin-bottom: -350px;
+      }
   }
   
