--- a/src/components/marketing/marketing.css
+++ b/src/components/marketing/marketing.css
@@ -1,5 +1,5 @@
 .background-image-market {
-  background-image: url('../../images/pages/market.jpg'); /* Replace with your image path */
+  background-image: url('../../images/pages/marketingPage.png'); /* Replace with your image path */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
